--- a/cmap-2017-theme/src/css/custom/widgets/nav/_scrollNav.scss
+++ b/cmap-2017-theme/src/css/custom/widgets/nav/_scrollNav.scss
@@ -1,7 +1,7 @@
 #scroll-nav{
   position: fixed;
   top: 0;
-  z-index: 2000;
+  z-index: 1001;
   transform: translateY(-100%);
 
   display: flex;
